-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.0 Alpha
-
None
-
macOS 10.13.6
-
-
f5204067a02bd0c13500ea6e66bb9211701f96db
With 5.12 the background color for selected list items is wrong (uses lighter text selection color). Please see screenshots for the difference betwwen 5.11.1 und 5.12 alpha.
For Gerrit Dashboard: QTBUG-70676 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
242504,3 | qt_mac_createRolePalettes: fix the highlight color for ItemViewPalette role | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |